# VtkUnityWorkbench

./: .gitignore  .gitmodules  CMakeLists.txt.old  README.md  Troubleshooting.md  notes-04-06.txt  notes-07-05.txt
Charts/: Architecture.drawio  Document Structure  (+1 more)
Source/: CMakeLists.txt  Cone.cxx  PlatformBase.h  VtkToUnityAPI.h  VtkToUnityAPIDefines.h  VtkToUnityAPI_OpenGLCoreES.cpp  VtkToUnityAPI_OpenGLCoreES.h  VtkToUnityInternalHelpers.h  VtkToUnityPlugin.cpp  VtkToUnityPlugin.h  VtkUnityWorkbenchAPI.h  VtkUnityWorkbenchAPIDefines.h  VtkUnityWorkbenchAPI_OpenGLCoreES.cpp  VtkUnityWorkbenchAPI_OpenGLCoreES.h  VtkUnityWorkbenchInternalHelpers.h  VtkUnityWorkbenchPlugin.cpp  VtkUnityWorkbenchPlugin.h  vtkExternalOpenGLRenderer3dh.cpp
Source/GL/: gl3w.c  glcorearb.h
Source/Initialisation/: VtkToUnityAPIFactory.cpp  VtkToUnityAPIFactory.h  VtkToUnityPluginInitialise.h  VtkUnityWorkbenchAPIFactory.cpp  VtkUnityWorkbenchAPIFactory.h  VtkUnityWorkbenchPluginInitialise.cpp  VtkUnityWorkbenchPluginInitialise.h
Source/VtkToUnityExample/: .gitignore  Assembly-CSharp.csproj  README.md  SteamVR.csproj  SteamVR_Actions.csproj  SteamVR_Editor.csproj  SteamVR_Input_Editor.csproj  SteamVR_Windows_EditorHelper.csproj  log.txt  unityProject.vrmanifest
Source/VtkToUnityExample/Assets/SteamVR_Input/: SteamVR_Input_Actions.cs
Source/VtkToUnityExample/Assets/SteamVR_Input/ActionSetClasses/: SteamVR_Input_ActionSet_default.cs
Source/VtkToUnityExample/Assets/SteamVR_Resources/Resources/: SteamVR_Settings.asset
Source/VtkToUnityExample/Assets/StreamingAssets/SteamVR/: actions.json  application_generated_unity_3dheart_exe_binding_vive_controller.json
Source/VtkToUnityExample/Assets/TextMesh Pro/Resources/Fonts & Materials/: LiberationSans SDF.asset
Source/VtkToUnityExample/Assets/VtkToUnity/VtkToUnityAssets/: LICENSE  README.md
Source/VtkToUnityExample/Assets/VtkToUnity/VtkToUnityAssets/Animations/: BigToSmall.anim  BrightToDark.anim  BrightToWhite.anim  DarkToBright.anim  DownToUp.anim  SmallToBig.anim  StandardButtonAnimation.controller  UpToDown.anim  WhiteToBright.anim
Source/VtkToUnityExample/Assets/VtkToUnity/VtkToUnityAssets/Materials/: 4 Way Arrow.mat  Brightness.mat  Contrast.mat  CutoutText.mat  Here.mat  Mat011Green.mat  Mat011SkyDodgerBlue.mat  Mat100Red Lit.mat  PanelButtonsDefault.mat  UnselectedGrey Lit.mat
Source/VtkToUnityExample/Assets/VtkToUnity/VtkToUnityAssets/Models/: README.md  move icon centred x90.mtl
Source/VtkToUnityExample/Assets/VtkToUnity/VtkToUnityAssets/Models/ControlIcons/: ResetButton.mtl  s-pause.mtl  s-play-centred.mtl  s-rev-fwd-centred.mtl
Source/VtkToUnityExample/Assets/VtkToUnity/VtkToUnityAssets/Models/GuiIcons/: ScalingSpheres.mtl
Source/VtkToUnityExample/Assets/VtkToUnity/VtkToUnityAssets/Prefabs/: marker_sphere.prefab
Source/VtkToUnityExample/Assets/VtkToUnity/VtkToUnityAssets/Prefabs/BoundingBox/: CropPlane.prefab  Edge.prefab  FacePhysics.prefab  MoveEdgeScaled.prefab  MprCornerCube.prefab  ScalingSpheres.prefab
Source/VtkToUnityExample/Assets/VtkToUnity/VtkToUnityAssets/Prefabs/ControlIcons/: 4 Way Arrow Billboard.prefab  Brightness Billboard.prefab  Contrast Billboard.prefab  Here Billboard.prefab  Move Icon.prefab  PointingSphere.prefab
Source/VtkToUnityExample/Assets/VtkToUnity/VtkToUnityAssets/Prefabs/GUI/: AnimationControlPanelMinUI.prefab  ColourControlPanelMinUI.prefab  DataControlPanelMinUI.prefab
Source/VtkToUnityExample/Assets/VtkToUnity/VtkToUnityAssets/Scenes/: example_cone_render_scene.unity  example_vr_cone_render_scene.unity  example_vr_volume_render_scene.unity  minimal_volume_render_scene.unity
Source/VtkToUnityExample/Assets/VtkToUnity/VtkToUnityAssets/Scripts/: GenericSingletonClass.cs
Source/VtkToUnityExample/Assets/VtkToUnity/VtkToUnityAssets/Scripts/Debugging/: ConeTestVtk.cs  LandmarksDepthTestUnity.cs  LandmarksDepthTestVtk.cs  RotateObjectWithMouse.cs  SpinAroundY.cs  UtilFileManager.cs  UtilScreenCapture.cs
Source/VtkToUnityExample/Assets/VtkToUnity/VtkToUnityAssets/Scripts/GUIInteractionIndication/: BillboardFaceCamera.cs  BoundingBox.cs  ButtonBigSmall.cs  DataCounterText.cs  DataNextPrevious.cs  FrameAnimationControl.cs  FrameCounterText.cs  GrabActionsChildMoveBase.cs  GuiPointerInOut.cs  IndicatorBase.cs  IndicatorChildren.cs  IndicatorColor.cs  IndicatorColorVisible.cs  IndicatorParent.cs  InitialiseLine.cs  InvertParentsScaleBase.cs  InvertParentsScaleX.cs  InvertParentsScaleXYZ.cs  InvertParentsScaleYZ.cs  ParentMoveBase.cs  ParentMoveScaleCentre.cs  PhysicsBoxFromVolume.cs  ReferenceScale.cs  TransferFunctionCounterText.cs  TransferFunctionNextPrevious.cs
Source/VtkToUnityExample/Assets/VtkToUnity/VtkToUnityAssets/Scripts/Miscellaneous/: ApplyDataStoreLocation.cs  Common.cs  DataStore.cs  KeyboardChooseData.cs  Math3d.cs
Source/VtkToUnityExample/Assets/VtkToUnity/VtkToUnityAssets/Textures/: README.md
Source/VtkToUnityExample/Assets/VtkToUnity/vtktounitybinary/: README.md
Source/VtkToUnityExample/Assets/VtkToUnity/vtktounitybinary/Scripts/: VtkToUnityLogging.cs  VtkToUnityPluginFunctions.cs  VtkUnityWorkbenchFunctions.cs  VtkUnityWorkbenchHelpers.cs
Source/VtkToUnityExample/Assets/XR/: XRGeneralSettings.asset
Source/VtkToUnityExample/Data/: heart_phantom.mhd
Source/VtkToUnityExample/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
Source/VtkToUnityPlugin/: .gitignore  LICENSE  README.md
Source/VtkToUnityPlugin/VtkModifications/: README.md  VtkVolumeRenderingInUnity.patch
Source/VtkToUnityPlugin/source/: CMakeLists.txt  PlatformBase.h  Singleton.h  VtkToUnityAPI.h  VtkToUnityAPIDefines.h  VtkToUnityAPI_OpenGLCoreES.cpp  VtkToUnityAPI_OpenGLCoreES.h  VtkToUnityAdapter.h  VtkToUnityInternalHelpers.h  VtkToUnityPlugin.cpp  VtkToUnityPlugin.h  vtkAdapter.h  vtkExternalOpenGLRenderer3dh.h
Source/VtkToUnityPlugin/source/Adapters/: generate-header.py  vtkConeSourceAdapter.cpp  vtkConeSourceAdapter.h
Source/VtkToUnityPlugin/source/Initialisation/: VtkToUnityPluginInitialise.cpp
(+23 files in other folders)
